--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a software developer?</p>
-      <h1>I am from Memphis,TN</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I am a trainer and professional boxer</p>
+      <h1>Where are you from/</h1>
+      <p>I am from Memphis,TN</p>
+      <h1>What are your favorite hobbies ?</h1>
+      <p>Reading, working out, hiking, and kayaking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Boxing</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Nashville, TN</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To start a career and create a better life for myself and my children.</p>
     </section>
 
     <footer id="footer">
